make sure active thread is visible

--- a/src/client/src/Kukulkan.css
+++ b/src/client/src/Kukulkan.css
@@ -32,11 +32,11 @@ body {
     background-color: #f0f4c3;
 }
 
-.kukulkan-thread-selected {
+.kukulkan-thread-active {
     background-color: rgba(85, 139, 47, 0.3);
 }
 
-.kukulkan-thread-selected:hover {
+.kukulkan-thread-active:hover {
     background-color: rgba(85, 139, 47, 0.4) !important;
 }
 
